# Swagger/accessTokenResponse.go
@@ -1,0 +1,5 @@
+package swagger
+
+type accessTokenResponse struct {
+	AccessToken string `json:"accessToken" example:"tu_nuevo_token_de_acceso_ejemplo"`
+}
